best-practices-vpol/disallow-cri-sock-mount/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-docker-sock
  namespace: test
spec:
  containers:
  - name: myshell
    image: "ubuntu:18.04"
  volumes:
  - name: dockersock
    hostPath:
      path: /var/run/docker.sock
---
apiVersion: v1
kind: Pod
metadata:
  name: exception-docker-sock-mixed
  namespace: test
spec:
  containers:
  - name: myshell
    image: "ubuntu:18.04"
  volumes:
  - name: dockersock
    hostPath:
      path: /var/run/docker.sock
  - name: containersock
    hostPath:
      path: /var/run/containerd/containerd.sock
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-docker-sock-mount
  namespace: test
spec:
  containers:
  - name: myshell
    image: "ubuntu:18.04"
    command:
    - /bin/sleep
    - "300"
  volumes:
  - name: dockersock
    hostPath:
      path: /var/run/docker.sock
---
apiVersion: v1
kind: Pod
metadata:
  name: docker-sock-lookalike
  namespace: test
spec:
  containers:
  - name: myshell
    image: "ubuntu:18.04"
  volumes:
  - name: data
    hostPath:
      path: /var/run/dockerXsock
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: test
spec:
  containers:
  - name: myshell
    image: "ubuntu:18.04"
    command:
    - /bin/sleep
    - "300"
  volumes:
  - name: data
    hostPath:
      path: /data
