best-practices-vpol/disallow-cri-sock-mount/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-cri-sock-mount
policies:
- ../disallow-cri-sock-mount.yaml
resources:
- resource.yaml
exceptions:
- exceptions.yaml
results:
- kind: Pod
  isValidatingPolicy: true
  policy: disallow-container-sock-mounts
  resources:
  - pod-with-docker-sock-mount
  result: fail
- kind: Pod
  isValidatingPolicy: true
  policy: disallow-container-sock-mounts
  resources:
  - exception-docker-sock
  result: pass
- kind: Pod
  isValidatingPolicy: true
  policy: disallow-container-sock-mounts
  resources:
  - exception-docker-sock-mixed
  result: fail
- kind: Pod
  isValidatingPolicy: true
  policy: disallow-container-sock-mounts
  resources:
  - goodpod01
  - docker-sock-lookalike
  result: pass
